--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "example",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "https://nxsyed.github.io/chart-builder/",
+  "homepage": "https://nxsyed.github.io/chart-builder/",
   "dependencies": {
     "@material-ui/core": "^1.2.1",
     "eon-react": "^0.1.3",
+    "gh-pages": "^1.2.0",
     "pubnub-react": "^1.2.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
